# angles-cli

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  config.example.json  gateway-flow.md  install.ps1  install.sh  instructions.txt  package.json  providers.toml
.github/workflows/: desktop.yml  release.yml
desktop/: Cargo.toml
desktop/src/: chat.rs  config.rs  main.rs  provider.rs  theme.rs
docs/: docs.html  embed_png.py  en-install.sh  faq.html  gateway.html  index.html  index.html.bak  render_shot.py  robots.txt  sitemap.xml  tools.html
docs/en-us/: docs.html  faq.html  index.html  tools.html
src/: api.rs  cli.rs  config.rs  gateway.rs  instructions.rs  main.rs  provider.rs  search.rs  server.rs  skill.rs  tools.rs
